[package]
name = "load-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
anyhow = "1.0.53"
petgraph = { version="0.6.0", features=["graphmap"] }
more_collection_macros = "0.2.1"
gag = "1.0.0"
lazy_static = "1.4.0"